# order-generator

./: .env.compose  .env.dev  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
account/: admin.py  models.py
account/migrations/: 0001_initial.py
common/: __init__.py  model_admin_company_restriction.py
company/: admin.py  apps.py  models.py
company/migrations/: 0001_initial.py  0002_company_owner.py
company/static/js/: input_mask.js  input_mask_company.js
customer/: admin.py  apps.py  models.py
customer/migrations/: 0001_initial.py  0002_customer_neighborhood_customer_number_and_more.py  0003_alter_customer_cpf_cnpj.py  0004_alter_customer_number.py  0005_alter_customer_phone_alter_customer_zip_code.py
customer/static/js/: fetch_address.js  input_mask.js
infra/database/init_scripts/: init_db.sql
order/: admin.py  models.py  views.py
order/migrations/: 0001_initial.py  0002_remove_order_leased_equipment_and_more.py  0003_order_cash_discount_percentage_and_more.py  0004_alter_order_monthly_fee.py  0005_remove_order_down_payment_percentage.py
ordergenerator/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
product/: admin.py  models.py
product/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_description_and_more.py
templates/: template.html
templates/admin/: base_site.html  import_products.html
templates/admin/product/: change_list.html
